# fast-envelope

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt
.github/workflows/: cmake-multi-platform.yml  continuous.yml
app/: CMakeLists.txt  main.cpp  test.cpp
app/benchmark/: AABBWrapper.cpp  AABBWrapper.h  CMakeLists.txt  MeshIO.cpp  MeshIO.hpp  csv_reader.cpp  csv_reader.h  getRSS.hpp  mesh_AABB.cpp  mesh_AABB.h  sampling.cpp  sampling.h
app/test_data/: 63465.off  63465.stl  63465_result.csv  63465_result.csv.json
app/types/: CMakeLists.txt  Rational.hpp
cmake/: FastEnvelopeDependencies.cmake  FastEnvelopeDownloadExternal.cmake  FastEnvelopeUtils.cmake  Warnings.cmake  geogram.cmake
cmake/recipes/: ipred.cmake  tbb.cmake
debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  spdlog.pc
debug/app/: Makefile  cmake_install.cmake
debug/app/benchmark/: Makefile  cmake_install.cmake
debug/app/types/: Makefile  cmake_install.cmake
debug/geogram/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  geogram1.pc  make_package.pl
debug/geogram/doc/: Makefile  VERSION.txt  cmake_install.cmake  devkit-full.dox  devkit-internal-light.dox  devkit-internal.dox  devkit.dox
debug/geogram/src/lib/geogram/: Makefile  cmake_install.cmake  version.h
debug/include/fastenvelope/: AABB.h  FastEnvelope.h  MeshIO.hpp  Morton.h  Rational.hpp  Types.hpp  common_algorithms.h  getRSS.hpp  sampling.h
debug/include/indirectpredicates/: ip_filtered.h
debug/src/: Makefile  cmake_install.cmake
debug/tbb/: Makefile  cmake_install.cmake  version_string.ver
geogram_predicates/: Predicates_psm.cpp  Predicates_psm.h  README.txt
indirectPredicates/: ip_filtered.cpp  ip_filtered.h  ip_filtered_ex.cpp  ip_filtered_ex.h
src/: AABB.cpp  AABB.h  CMakeLists.txt  EnvelopeTest.cpp  EnvelopeTest.h  FastEnvelope.cpp  FastEnvelope.h  FastEnvelopeV2.cpp  FastEnvelopeV2.h  Logger.cpp  Logger.hpp  MeshIO.cpp  Morton.cpp  Morton.h  Multiprecision.hpp  Parameters.h  Rational.hpp  Types.hpp  common_algorithms.cpp  common_algorithms.h  intersections.cpp  intersections.h  main.cpp  obb.cpp  obb.h
src/Precision/: CMakeLists.txt  complexprecision.h  fprecision.h  intervalprecision.h  iprecision.h  precisioncore.cpp
src/benchmark/: AABBWrapper.cpp  AABBWrapper.h  CMakeLists.txt  mesh_AABB.cpp  mesh_AABB.h
src/indirectPredicates/: CMakeLists.txt  ip_filtered.cpp  ip_filtered.h
src/types/: CMakeLists.txt  Multiprecision.hpp  Rational.hpp
